# tempo-commit

./: pyproject.toml
src/: config.py  jira_client.py  script.py
src/services/: commits.py
