[tool.poetry]
name = "tempo-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tempo_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
jira = {extras = ["cli"], version = "^3.6.0"}
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
